overflow text fixed

--- a/styles/page/_landing.scss
+++ b/styles/page/_landing.scss
@@ -167,13 +167,16 @@
 }
 
 
-.truncate-overflow p:not(:first-child) {
+.truncate-overflow p {
   @apply text-sm text-slate-500;
   width:100%;
   overflow: hidden;
-  display: none;
+  display: -webkit-box;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
   margin-bottom: 10px;
 }
 
+.truncate-overflow p:not(:first-child) {
+  display: none;
+}
